[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13"
winit = { version = "0.29.9", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "wayland-csd-adwaita-crossfont", "wayland-csd-adwaita-notitle", "android-native-activity", "android-game-activity", "serde", "rwh_05", "mint"] }
env_logger = "0.11"
error-iter = "0.4"
log = "0.4"
winit_input_helper = "0.16"

textgraph = { path = "../textgraph" }