[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
# It's the 437<3 example, it's gonna require 437<3:
textgraph = { path = "../textgraph" }

# To get a window on the screen:
pixels = "0.13"
winit = { version = "0.29.9", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "wayland-csd-adwaita-crossfont", "wayland-csd-adwaita-notitle", "android-native-activity", "android-game-activity", "serde", "rwh_05", "mint"] }

# Only needed for the example itself, not to make 437<3 work:
rand = "0.8.5"