[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
textgraph = { path = "../textgraph", features = ["rand"] }

# To get a window on the screen:
pixels = "0.13"
winit = { version = "0.29.9", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "wayland-csd-adwaita-crossfont", "wayland-csd-adwaita-notitle", "android-native-activity", "android-game-activity", "serde", "rwh_05", "mint"] }
rand = "0.8.5"
