[package]
name = "textgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
rand = { version = "0.8.5", optional = true }
line_drawing = "1.0.0"

[features]
default = ["rand"]
# Features that require a random number generator
rand = ["dep:rand"]